--- a/views/Partials/header.ejs
+++ b/views/Partials/header.ejs
@@ -11,6 +11,7 @@
 </head>
 
 <header class="navbar">
+ <img src="/logo1.png" class="logo-photo" style="max-width: 100px;">
   <h1 class = "brand">📝MindCanvas</h1>
 
   <div class="nav-container">
